Fixed: - Refactoring + solving sonar qube issues